tests/src/frontend/typechecking/invalid/untracked_fun2.sk
// it's an error to call an untracked fun from a tracked context
untracked fun f(): String {
  "OK\n"
}

fun main(): void {
  print_raw(f())
}
